# bme280-nrf

./: .gitignore  Cargo.toml  README.md
button_display/: Cargo.toml
button_display/src/: main.rs
i2c/: Cargo.toml
i2c/src/: main.rs
schematics/: nRF52840_BME280_MAX7219.kicad_sch
simple_display/: Cargo.toml
simple_display/src/: main.rs
