[package]
name = "simple-display"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
bme280.workspace = true
max7219.workspace = true
libm.workspace = true
heapless.workspace = true

embassy-executor.workspace = true
embassy-time.workspace = true
embassy-nrf.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt.workspace = true
static_cell.workspace = true

[[bin]]
name = "simple-display"
path = "src/main.rs"
test = false
doctest = false
bench = false
